--- a/.gitignore
+++ b/.gitignore
@@ -136,5 +136,6 @@ dmypy.json
 # pytype static type analyzer
 .pytype/
 .venv
+.vscode
 
 # End of https://www.toptal.com/developers/gitignore/api/python
