--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,3 +8,16 @@ services:
       - .:/code
     ports:
       - "5001:5000"
+    #adding postgreSQL
+    depends_on:
+      - db
+    links:
+      - db:db
+  db:
+    image: postgres:11
+    ports:
+      - '5432'
+    environment:
+      - POSTGRES_DB=postgres
+      - POSTGRES_USER=postgres
+      - POSTGRES_PASSWORD=postgres
