--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ authors = ["Vijayeta Rangarajan <vijayetar@gmail.com>"]
 python = "^3.8"
 django = "^3.0.7"
 djangorestframework = "^3.11.0"
+psycopg2-binary = "^2.8.5"
 
 [tool.poetry.dev-dependencies]
 black = "^19.10b0"
